--- a/src/sass/_aside.scss
+++ b/src/sass/_aside.scss
@@ -4,8 +4,8 @@
 .aside {
     position: absolute;
     background-color: $blue;
-    width: 35.5em;
-    height: 100%;
+    width: 27vw;
+    height: 55vw;
     left: 0px;
     top: 0px;
 
